--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <br>
           <div class="row">
             <div class="col-sm-6">
-              <a href="project/index.html">
+              <a href="project/indexwebsite.html">
                 <div class="theme-box">
                   <!-- <p>&#183; &#183; &#183;</p> -->
                   <p>Website Sahabat Naufal</p>
