--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <a href="project/indexwebsite.html">
                 <div class="theme-box">
                   <!-- <p>&#183; &#183; &#183;</p> -->
-                  <p>Website Sahabat Naufal</p>
+                  <p>Website Sahabat Naufal <3</p>
                   <img src="https://cdn.discordapp.com/attachments/864277544210268200/956020170592235610/website1.jpg" alt="Website">
                 </div>
               </a>
