--- a/project/id.html
+++ b/project/id.html
@@ -173,7 +173,7 @@ particlesJS.load('particles-js', particlesJson);
               <!-- Nav Links -->
               <div class="collapse navbar-collapse" id="headerMenuSticky">
                 <ul class="nav navbar-nav">
-                  <li><a href="../beranda.html">Beranda</a></li>
+                  <li><a href="../index.html">Beranda</a></li>
                   <li><a href="donation.html">Donasi</a></li>
                   <li><a href="spek.html">System requirements</a></li>
                   <li><a href="rules.html">Peraturan</a></li>
