--- a/project/spek2.html
+++ b/project/spek2.html
@@ -123,7 +123,7 @@
               <!-- Nav Links -->
               <div class="collapse navbar-collapse" id="headerMenuSticky">
                 <ul class="nav navbar-nav">
-                  <li><a href="../beranda.html">Beranda</a></li>
+                  <li><a href="../index.html">Beranda</a></li>
                   <li><a href="id.html">Beranda Utama</a></li>
                   <li><a href="donation.html">Donasi</a></li>
                   <li><a href="spek.html">System requirements</a></li>
