--- a/project/id.html
+++ b/project/id.html
@@ -129,7 +129,7 @@ particlesJS.load('particles-js', particlesJson);
                 <ul class="nav navbar-nav">
                   <li><a href="../index.html">Beranda</a></li>
                   <li><a href="donation.html">Donasi</a></li>
-                  <li><a href="spek.html">Peraturan</a></li>
+                  <li><a href="spek.html">System requirements</a></li>
                   <li><a href="rules.html">Peraturan</a></li>
                   <!-- <li><a href="https://www.vectorrp.com/ts">Teamspeak</a></li> -->
                   <li><a href="https://guideffa.sahabatnaufal.my.id/" target="_blank">Docs</a></li>
