Update Head Picture

--- a/project/about.html
+++ b/project/about.html
@@ -10,7 +10,7 @@
 
   <title>Tim - Sahabat Naufal</title>
 
-  <link href="../assets/img/person/person_6.jpg" rel="icon">
+  <link href="../assets/img/person/Naufalnobg.png" rel="icon">
 
   <link rel="stylesheet" href="../assets/vendor/animate/animate.css">
 
@@ -40,7 +40,7 @@
         <div class="navbar-collapse collapse" id="navbarContent">
           <ul class="navbar-nav ml-lg-4 pt-3 pt-lg-0">
             <li class="nav-item">
-              <a href="../index.html" class="nav-link">Beranda</a>
+              <a href="../indexwebsite.html" class="nav-link">Beranda</a>
             </li>
             <li class="nav-item">
               <a href="index.html" class="nav-link">Beranda Utama</a>
