--- a/project/donation.html
+++ b/project/donation.html
@@ -21,7 +21,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		  <meta name="description" content="Pilih titik awalmu di Vector Indonesia.">
-		<title>  Donation FiveM - Vector Indonesia
+		<title>  Donasi - Sahabat Naufal FFA
 </title>
 		<!-- Bootstrap v3.3.7 -->
 		<link rel="stylesheet" href="../assets/css/bootstrap.min.css">
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/temp.css">
 		<!-- Favicon -->
-		<link rel="shortcut icon" href="../assets/img/Naufal.jpg">
+		<link rel="shortcut icon" href="../assets/img/Naufalnobg.png">
 	</head>
 
 	<body>
