--- a/project/roleinfo.html
+++ b/project/roleinfo.html
@@ -10,9 +10,7 @@
 
   <title>Role Informasi - Sahabat Naufal</title>
 
-  <link href="../assets/img/person/person_6.jpg" rel="icon">
-
-  <link href="../assets/img/person/person_6.jpg" rel="">
+  <link href="../assets/img/person/Naufalnobg.png" rel="icon">
 
   <link rel="stylesheet" href="../assets/vendor/animate/animate.css">
 
