--- a/project/blog.html
+++ b/project/blog.html
@@ -10,6 +10,8 @@
 
   <title>DigiGram - Free Agency Template</title>
 
+  <link href="../assets/img/person/Naufalnobg.png" rel="icon">
+
   <link rel="stylesheet" href="../assets/vendor/animate/animate.css">
 
   <link rel="stylesheet" href="../assets/css/bootstrap.css">
