--- a/project/contact.html
+++ b/project/contact.html
@@ -6,7 +6,7 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <link href="../assets/img/person/person_6.jpg" rel="icon">
+  <link href="../assets/img/person/Naufalnobg.png" rel="icon">
 
   <meta name="copyright" content="MACode ID, https://macodeid.com">
 
