--- a/project/indexwebsite.html
+++ b/project/indexwebsite.html
@@ -10,7 +10,7 @@
 
   <title>Home - Sahabat Naufal</title>
 
-  <link href="../assets/img/person/person_6.jpg" rel="icon">
+  <link href="../assets/img/person/Naufalnobg.png" rel="icon">
 
   <link rel="stylesheet" href="../assets/vendor/animate/animate.css">
 
