--- a/project/kalkulator.html
+++ b/project/kalkulator.html
@@ -3,6 +3,9 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+
+    <link href="../assets/img/person/Naufalnobg.png" rel="icon">
+    
     <title>Calculator Application</title>
     <link rel="stylesheet" type="text/css" href="../assets/css/style2.css" />
     <meta property="og:image" content="http://ellisonleao.github.io/clumsy-bird/data/img/bg.png" />
