--- a/project/spek.html
+++ b/project/spek.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/temp.css">
 		<!-- Favicon -->
-		<link rel="shortcut icon" href="../assets/img/Naufal.jpg">
+		<link rel="shortcut icon" href="../assets/img/Naufalnobg.png">
 	</head>
 
 	<body>
