Fix bug website

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-		  <meta name="description" content="GTA V Roleplay Indonesia. Minecraft RPG Server Indonesia. RedM Roleplay Indonesia. FiveM Roleplay Indonesia. NoPixel Indonesia. Vector Indonesia.">
+		  <meta name="description" content="">
 		<title>  Welcome to Sahabat Naufal
 </title>
 		<!-- Bootstrap v3.3.7 -->
@@ -30,7 +30,7 @@
 				<!-- Main Style -->
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/temp.css">
-    <link rel="shortcut icon" href="assets/img/Naufal.jpg">
+    <link rel="shortcut icon" href="assets/img/Naufalnobg.png">
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="assets/images/auth-icon.png">
 	</head>
@@ -61,7 +61,7 @@
         <h1>Sahabat Naufal</h1>
       </div> <!-- /col-sm-6 -->
       <div class="col-sm-6">
-        <p>Sahabat Naufal adalah komunitas milik bersama untuk kebahagian bersama</p>
+        <p>Sahabat Naufal adalah komunitas yang dibentuk oleh owner Naufal Mulyarizki awal terbuat ini hanya untuk iseng dan mencari pengalaman baru karna ini menarik menurut jadi saya kembangkan menjadi seperti ini</p>
       </div> <!-- /col-sm-6 -->
     </div> <!-- /row -->
   </div> <!-- /container -->
@@ -77,8 +77,21 @@
           <ul class="theme-body-menu">
             <!-- <li><a href="https://www.vectorrp.com/id/ts">Teamspeak Vector</a></li> -->
             <li><a href="https://discord.gg/kVkHtH3RgT" target="_blank">Discord Sahabat Naufal</a></li>
-            <li><a href=""></a></li>
+            <li><a href="https://wiki.indopride.id/index.php?title=Salvatrucha" target="_blank">Wiki Indopride Keluarga Salvatrucha</a></li>
+            <li><a href="https://wiki.indopride.id/index.php?title=Naufal_Salvatrucha" target="_blank">Wiki Indopride Naufal Salvatrucha</a></li>
             <li><a href="https://guideffa.sahabatnaufal.my.id/" target="_blank">Docs</a></li>
+          <hr>
+          <hr>
+          <h3>Ikuti</h3>
+          <hr>
+          <ul class="theme-body-menu"></ul>
+          <li><a href="https://www.instagram.com/naufal.salvatrucha/" target="_blank">Instagram</a></li>
+          <li><a href="https://www.tiktok.com/@naufal.salvatrucha"target="_blank">TikTok</a></li>
+          <li><a href="https://steamcommunity.com/id/naufalsalvatrucha/" target="_blank">Steam</a></li>
+          <li><a href="https://mail.google.com/mail/u/0/?fs=1&to=naufalmulyarizki09@gmail.com&su=I%20Got%20Your%20Email%20From%20Your%20Website&body=Hi&&tf=cm" target="_blank">Gmail</a></li>
+          <li><a href="https://github.com/naufalmulyarizki" target="_blank">Github</a></li>
+          <li><a href="https://open.spotify.com/user/67dw5dxfmes1zt6u31cpdgkgl?si=59acee0a401f473e" target="_blank">Spotify</a></li>
+          
             <!-- <li><a href="https://saltmine.de/saltychat/downloads/2.0.1" target="_blank">Saltychat</a></li> -->
             <!-- <li><a href="https://github.com/Itokoyamato/TokoVOIP_TS3/releases/download/v1.2.5-v1.3.4/tokovoip_1_2_5.ts3_plugin" target="_blank">TokoVOIP</a></li> -->
           </ul> <!-- /theme-body-menu -->
@@ -110,7 +123,7 @@
               <a href="project/indexwebsite.html">
                 <div class="theme-box">
                   <!-- <p>&#183; &#183; &#183;</p> -->
-                  <p>Website Sahabat Naufal <3</p>
+                  <p>Website Sahabat Naufal</p>
                   <img src="https://cdn.discordapp.com/attachments/864277544210268200/956020170592235610/website1.jpg" alt="Website">
                 </div>
               </a>
