--- a/project/about.html
+++ b/project/about.html
@@ -10,7 +10,7 @@
 
   <title>Tim - Sahabat Naufal</title>
 
-  <link href="../assets/img/person/Naufalnobg.png" rel="icon">
+  <link href="../assets/img/person/person_7.png" rel="icon">
 
   <link rel="stylesheet" href="../assets/vendor/animate/animate.css">
 
@@ -40,10 +40,10 @@
         <div class="navbar-collapse collapse" id="navbarContent">
           <ul class="navbar-nav ml-lg-4 pt-3 pt-lg-0">
             <li class="nav-item">
-              <a href="../indexwebsite.html" class="nav-link">Beranda</a>
+              <a href="../index.html" class="nav-link">Beranda</a>
             </li>
             <li class="nav-item">
-              <a href="index.html" class="nav-link">Beranda Utama</a>
+              <a href="indexwebsite.html" class="nav-link">Beranda Utama</a>
             </li>
             <li class="nav-item active">
               <a href="about.html" class="nav-link">Tim</a>
@@ -194,11 +194,11 @@
         <div class="row align-items-center text-center">
           <div class="col-lg-4">
             <p>All Members</p>
-            <h2>$<span class="number" data-number="54"></span></h2>
+            <h2><span class="number" data-number="54"></span></h2>
           </div>
           <div class="col-lg-4">
             <p>Members</p>
-            <h2>$<span class="number" data-number="28"></span></h2>
+            <h2><span class="number" data-number="28"></span></h2>
           </div>
           <div class="col-lg-4">
             <p>Bot</p>
