--- a/project/contact.html
+++ b/project/contact.html
@@ -6,7 +6,7 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <link href="../assets/img/person/Naufalnobg.png" rel="icon">
+  <link href="../assets/img/person/person_7.png" rel="icon">
 
   <meta name="copyright" content="MACode ID, https://macodeid.com">
 
@@ -43,7 +43,7 @@
               <a href="../index.html" class="nav-link">Beranda</a>
             </li>
             <li class="nav-item">
-              <a href="index.html" class="nav-link">Beranda Utama</a>
+              <a href="indexwebsite.html" class="nav-link">Beranda Utama</a>
             </li>
             <li class="nav-item">
               <a href="about.html" class="nav-link">Tim</a>
