Update Index Portofolio

--- a/project/GameChess.html
+++ b/project/GameChess.html
@@ -1251,7 +1251,7 @@ window.onload = function(){
  </script>
  <body> 
  <center>
-     <font Size="6" Color="Yellow">Chess V1.0<br> Magelang1337.com</font>
+     <font Size="6" Color="Yellow">Game Catur<br> Naufal Mulyarizki</font>
 
   <div id="container"></div> 
 
