--- a/project/portofolio.html
+++ b/project/portofolio.html
@@ -349,7 +349,7 @@
       </div>
       <h1 class="text-center fw-normal wow fadeInUp">Projek Yang Saya Selesaikan</h1>
       <div class="filterable-button py-3 wow fadeInUp" data-toggle="selected">
-        <button class="btn btn-theme-outline selected" data-filter="*">Semua</button>
+        <button class="btn btn-theme-outline selected" data-filter="*">Segarkan</button>
         <!-- <button class="btn btn-theme-outline" data-filter=".apps">Apps</button>
         <button class="btn btn-theme-outline" data-filter=".template">Template</button>
         <button class="btn btn-theme-outline" data-filter=".ios">IOS</button>
